test/users/engin/retInnerFunction.good
retInnerFunction.chpl:3: error: Inner functions that uses outer-local variables cannot be returned.
